# connections

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README
cmake/: cntnsConfig.cmake.in  cntnsFunctions.cmake
include/: connections.h
include/connections/linear_algebra/: matrix.hpp  vector.hpp
include/connections/linear_algebra/cpu/: matrix.hpp  vector.hpp
include/connections/linear_algebra/gpu/: matrix.cuh  vector.cuh
include/connections/linear_algebra/gpu/cuda/: activations.cuh  loss.cuh  matrix.cuh  vector.cuh
include/connections/linear_algebra/proxies/: outer_product_proxy.hpp  transpose_proxy.hpp
include/connections/network/: activation_funcs.hpp  arena.hpp  create_network.hpp  layer.hpp  loss_funcs.hpp  network.hpp
include/connections/training/: testing.hpp  training.hpp  training_data.hpp
include/connections/util/: gpu.hpp  operator_crtp.hpp  output.hpp  perf.hpp  self_crtp.hpp  tuple.hpp
include/connections/util/concepts/: types.hpp  vector.hpp
include/linear_algebra/: matrix.hpp  vector.hpp
include/network/: activation_funcs.hpp  create_network.hpp  layer.hpp  layers.hpp  network.hpp
include/network/cpu/: cpu_layer.hpp
include/training/: training.hpp  training_data.hpp
include/util/: operator_crtp.hpp  self_crtp.hpp
include/util/concepts/: conversions.hpp  vector.hpp
src/: activations.cu  loss.cu  matrix.cu  vector.cu
src/network/: layer.cpp  network.cpp
