cmake_minimum_required(VERSION 3.14)

set(CNTNS_NAME connections)
set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

project(${CNTNS_NAME})

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)


add_library(${CNTNS_NAME} INTERFACE)
target_include_directories(${CNTNS_NAME} INTERFACE INCLUDE_DIR)